fix: center tab buttons on mobile

--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -617,6 +617,12 @@ code {
   flex-wrap: wrap;
   justify-content: center;
   margin-top: 24px;
+
+  @media #{$mobile} {
+    flex-direction: column;
+    align-items: center;
+  }
+  
   a {
     font-weight: 600;
     font-size: 20px;
